# demo_crawl

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.sh
myspider/: output.csv  output.json  scrapy.cfg
myspider/myspider/: items.py  pipelines.py  settings.py
myspider/myspider/spiders/: example.py
mysql/Dump20250122/: demo_crawl_crawler_pages.sql  demo_crawl_crawler_results.sql  demo_crawl_user_comments.sql
